created the database to hold website information using rake

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
     adapter: postgresql
-    database: to_do_development
+    database: salon_development
 
 test:
     adapter: postgresql
-    database: to_do_test
+    database: salon_test
